Browse from Quiz, Quiz from Browse

--- a/Enfoca/Features/Browse/Browse.storyboard
+++ b/Enfoca/Features/Browse/Browse.storyboard
@@ -39,16 +39,27 @@
                                             <action selector="doneButtonAction:" destination="3hr-uX-jdh" eventType="touchUpInside" id="8TA-F5-ziv"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ato-GZ-FIW">
+                                        <rect key="frame" x="335" y="33" width="32" height="30"/>
+                                        <state key="normal" title="Quiz">
+                                            <color key="titleColor" red="0.86644273999999999" green="0.87051200870000001" blue="0.8786925673" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="presentQuizAction:" destination="3hr-uX-jdh" eventType="touchUpInside" id="mkl-Nk-hMv"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="GML-ue-jy4" firstAttribute="centerY" secondItem="biK-m3-sRK" secondAttribute="centerY" id="1zL-LQ-AFy"/>
                                     <constraint firstAttribute="height" constant="64" id="Om8-Yr-XT3"/>
+                                    <constraint firstAttribute="trailing" secondItem="ato-GZ-FIW" secondAttribute="trailing" constant="8" id="RSV-dR-8pu"/>
                                     <constraint firstItem="biK-m3-sRK" firstAttribute="leading" secondItem="0F6-9P-Mgk" secondAttribute="leading" constant="8" id="VHa-A0-bmB"/>
                                     <constraint firstItem="GML-ue-jy4" firstAttribute="top" secondItem="0F6-9P-Mgk" secondAttribute="top" constant="32" id="WQM-1B-UlV"/>
                                     <constraint firstAttribute="bottom" secondItem="biK-m3-sRK" secondAttribute="bottom" constant="4" id="jHm-Rf-gTj"/>
                                     <constraint firstItem="GML-ue-jy4" firstAttribute="leading" secondItem="0F6-9P-Mgk" secondAttribute="leading" constant="48" id="vPN-9l-Upe"/>
                                     <constraint firstAttribute="trailing" secondItem="GML-ue-jy4" secondAttribute="trailing" constant="48" id="vXt-Ax-Tdm"/>
+                                    <constraint firstItem="ato-GZ-FIW" firstAttribute="baseline" secondItem="GML-ue-jy4" secondAttribute="baseline" id="wxV-31-WgD"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oZ5-GF-viM">
@@ -74,6 +85,7 @@
                         <outlet property="tableViewContainer" destination="oZ5-GF-viM" id="Bey-nB-cRh"/>
                         <outlet property="titleLabel" destination="GML-ue-jy4" id="W6b-eJ-Glm"/>
                         <segue destination="rKs-2h-tjs" kind="show" identifier="WordPairEditorViewControllerSegue" id="BGl-Ja-d4P"/>
+                        <segue destination="sS5-8J-hBR" kind="show" identifier="QuizSegue" id="JDC-eQ-7YM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wrp-07-Erd" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -87,6 +99,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jJ3-ns-CFo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="874" y="34"/>
+        </scene>
+        <!--Quiz-->
+        <scene sceneID="9Mc-xN-3TZ">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Quiz" id="sS5-8J-hBR" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nlF-D8-FTD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="931" y="213"/>
         </scene>
     </scenes>
 </document>
